# spotify-as-a-service

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  playlist_service.db  pyproject.toml
app/: main.py
app/core/: cache.py  config.py  logging.py  rate_limit.py
app/database/: __init__.py  session.py
app/routes/: api.py  health.py  playlists.py
app/services/: playlist.py  spotify.py
mnt/user-data/outputs/playlist-as-a-service/app/models/: playlist.py
mnt/user-data/outputs/playlist-as-a-service/app/schemas/: playlist.py
